cluster/services/duplicacy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: duplicacy
spec:
  selector:
    matchLabels:
      run: duplicacy
  replicas: 1
  serviceName: duplicacy
  volumeClaimTemplates:
    - metadata:
        name: duplicacy-db
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 500Mi
  template:
    metadata:
      labels:
        run: duplicacy
    spec:
      hostname: duplicacy-pod
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: shoebox
        - name: promtail-config
          configMap:
            name: sidecar-promtail
        - name: sidecar-promtail-logs
          emptyDir:
            medium: Memory
      containers:
        - name: promtail-sidecar
          image: grafana/promtail:2.1.0
          imagePullPolicy: IfNotPresent
          args:
            - "-config.file=/etc/promtail/config.yml"
            - '--client.external-labels=run=$(POD_RUN),namespace=$(POD_NAMESPACE),pod=$(POD_NAME)'
          volumeMounts:
            - name: sidecar-promtail-logs
              mountPath: /sidecar-logs
            - mountPath: /etc/promtail
              name: promtail-config
        - name: duplicacy
          resources:
            requests:
              memory: "6Gi"
            limits:
              memory: "8Gi"
          image: saspus/duplicacy-web:mini
          ports:
            - containerPort: 3875
              name: duplicacy
              protocol: TCP
          volumeMounts:
            - mountPath: "/logs"
              name: duplicacy-db
              subPath: "logs"
            - mountPath: "/config"
              name: duplicacy-db
              subPath: "config"
            - mountPath: "/cache"
              name: nfs-storage
              subPath: ".duplicacy-cache"
            - name: nfs-storage
              mountPath: "/storage"
---

apiVersion: v1
kind: Service
metadata:
  name: duplicacy
  labels:
    run: duplicacy
spec:
  ports:
  - port: 3875
    protocol: TCP
  selector:
    run: duplicacy

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicacy
spec:
  rules:
  - host: duplicacy.cluster.vert
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duplicacy
            port:
              number: 3875
  - host: duplicacy.vert
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: duplicacy
            port:
              number: 3875
